# knGraph-BigWork

./: .env  .gitignore  README.md  ask_llm.py  ask_vllm.py  config.toml  data_loader.py  docker-compose.yaml  extract_knowledge.py  main.py  output.txt  pyproject.toml
assets/: 2022年中药药典.txt  all_herbs_data.json  final_knowledge_graph_results.json  final_knowledge_graph_results.jsonl  schema.json  test_herbs_data.json
data_prepare/: data_loader.py
database/: config.py  datamaker.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/app/components/: Header.tsx  UserAvatar.tsx
frontend/app/components/chat/: BackgroundMonk.tsx  ChatArea.tsx  ChatSender.tsx  ConversationList.tsx  MessageBubble.tsx  WelcomeMessage.tsx  index.ts
frontend/app/lib/: axios.ts  chat.ts
