[project]
name = "kngraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
]

[tool.ruff]
line-length = 120
lint.ignore = [
    "B904",
    "B006",
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E712",
    "F401",
    "E711",# 在sqlmodel的对比中必须使用 == None
]

[tool.uv]
index-url = "http://mirrors.aliyun.com/pypi/simple/"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]