[project]
name = "kngraph-bigwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "hydra-core>=1.3.2",
    "jieba>=0.42.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "opt-einsum>=3.4.0",
    "peft>=0.18.0",
    "protobuf>=6.33.2",
    "pydantic>=2.12.5",
    "pyhocon>=0.3.61",
    "rouge-chinese>=1.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "ujson>=5.11.0",
    "vllm>=0.1.2",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
