[project]
name = "kngraph-bigwork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.3.5",
    "ujson>=5.11.0",
    "tqdm>=4.67.1",
    "protobuf>=6.33.2",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.10.7",
    "openai>=2.9.0",
    "socksio>=1.0.0",
    "neo4j>=6.0.3",
    "pydantic>=2.12.5",
    "toml>=0.10.2",
]
# # uv sync --extra llm
[project.optional-dependencies]
llm = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.4.1",
    "huggingface-hub>=0.36.0",
    "jieba>=0.42.1",
    "nltk>=3.9.2",
    "opt-einsum>=3.4.0",
    "peft>=0.18.0",
    "rouge-chinese>=1.0.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentencepiece>=0.2.1",
    "seqeval>=1.2.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "llama-index>=0.12.0",
]
server = [
    "hydra-core>=1.3.2",
    "jinja2>=3.1.6",
    "pyhocon>=0.3.61",
    "tiktoken>=0.12.0",
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "starlette>=0.40.0",
    "sse-starlette>=2.1.3",
]


[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
